[package]
name = "detector_node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "detector_node"
path = "src/main.rs"

[dependencies]
dora-node-api = "0.3.13"
opencv = { version = "0.97.2", features = ["clang-runtime"] }
tract-onnx = "0.22.0"
ndarray = "0.15"
bytemuck = "1.12.0"
arrow = "54.3.1"
image = "0.24"
anyhow = "1.0"
thiserror = "1.0"
itertools = "0.10"
log = "0.4"
env_logger = "0.10"
tract-core = "0.22.0"
